# OpenMetra

./: .gitignore  MANIFEST.in  Makefile  Metra  MetraOff  MetraOn  MetraPlot  MetraSwitch  OpenMetra  OpenMetra.py  README.md  measure.py  set_measurement_rate.py  setup.cfg  setup.py  simple.py  simple_big.py  stdeb.cfg
openmetra/: __init__.py  openmetra.py
