[metadata]
    name = openmetra
    author = Ho-Ro
    author_email = Ho-Ro@users.noreply.github.com
    url= http://github.com/Ho-Ro/OpenMetra
    description = Gossen METRAHit 29s remote control and data readout
    long_description = Receive serial data, decode and print it with optional timestamp and unit
    platforms= all
    license = GPLv3
    version = attr: openmetra.VERSION


[options]
    packages = find:
    scripts =
        Metra
        MetraSwitch
        MetraPlot
    python_requires = >=3.6, <4
    install_requires = matplotlib


[options.data_files]
    share/doc/openmetra =
        Changelog
        GPLv3_short
        README.md


[sdist_dsc]
    compat=10
